// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    style="display: flex; max-height: 700px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main gcpConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-gcp"
            >
              <svg
                height="40"
                viewBox="0 0 14 12"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="8.5"
                  id="service-gcp_svg__a"
                  maskUnits="userSpaceOnUse"
                  width="9.1"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h9.1v8.5H0z"
                    fill="#fff"
                  />
                </mask>
                <path
                  d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                  fill="#cac9c2"
                />
                <path
                  d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                  fill="#fff"
                />
                <path
                  d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                  fill="#5072aa"
                />
                <path
                  d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                  fill="#4d6796"
                />
                <path
                  d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                  fill="#fff"
                />
                <path
                  d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                  fill="#cc4232"
                />
                <path
                  d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                  fill="#b23f33"
                />
                <path
                  d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                  fill="#fff"
                />
                <path
                  d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                  fill="#ecb02a"
                  mask="url(#service-gcp_svg__a)"
                  transform="translate(0 3.421)"
                />
                <path
                  d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                  fill="#c79732"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connector
          </span>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              1
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.billingExport.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.grantPermission.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceGcp.overview.heading
            </h2>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main main"
                      style="width: 65%;"
                    >
                      <div
                        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  />
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main"
                              icon="edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="ceGcpOverview_name"
                              >
                                connectors.name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="projectId-1"
                        >
                          <label
                            class="bp3-label"
                            for="projectId"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="ceGcpOverview_projectId"
                            >
                              connectors.ceGcp.overview.projectIdLabel
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="projectId"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                          >
                            <label
                              class="Label--main"
                              style="font-size: 13px; font-weight: normal;"
                            >
                              optionalField
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                                data-name="edit"
                                data-testid="description-edit"
                                icon="edit"
                              >
                                <svg
                                  data-icon="edit"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </label>
                          </div>
                          <div
                            class="StyledProps--font StyledProps--main"
                          >
                            <label
                              class="Label--main"
                              style="font-size: 13px; font-weight: normal;"
                            >
                              optionalField
                              <span
                                class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                                data-name="edit"
                                data-testid="tags-edit"
                                icon="edit"
                              >
                                <svg
                                  data-icon="edit"
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                >
                                  <desc>
                                    edit
                                  </desc>
                                  <path
                                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main buttonPanel"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    style="display: flex; max-height: 700px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main gcpConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-gcp"
            >
              <svg
                height="40"
                viewBox="0 0 14 12"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="8.5"
                  id="service-gcp_svg__a"
                  maskUnits="userSpaceOnUse"
                  width="9.1"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h9.1v8.5H0z"
                    fill="#fff"
                  />
                </mask>
                <path
                  d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                  fill="#cac9c2"
                />
                <path
                  d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                  fill="#fff"
                />
                <path
                  d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                  fill="#5072aa"
                />
                <path
                  d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                  fill="#4d6796"
                />
                <path
                  d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                  fill="#fff"
                />
                <path
                  d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                  fill="#cc4232"
                />
                <path
                  d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                  fill="#b23f33"
                />
                <path
                  d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                  fill="#fff"
                />
                <path
                  d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                  fill="#ecb02a"
                  mask="url(#service-gcp_svg__a)"
                  transform="translate(0 3.421)"
                />
                <path
                  d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                  fill="#c79732"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connector
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.billingExport.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.grantPermission.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceGcp.billingExport.heading
            </h2>
            <div
              class="subHeader"
              style="padding-right: 40px;"
            >
              connectors.ceGcp.billingExport.description
            </div>
            <span
              class="StyledProps--font StyledProps--main info StyledProps--font-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7 StyledProps--margin-right-xsmall"
                icon="info-sign"
              >
                <svg
                  data-icon="info-sign"
                  height="15"
                  viewBox="0 0 16 16"
                  width="15"
                >
                  <desc>
                    info-sign
                  </desc>
                  <path
                    d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              connectors.ceGcp.billingExport.followInstruction
            </span>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main launchTemplateBut Button--with-current-color Button--withRightIcon"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  connectors.ceGcp.billingExport.launchTemplate
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="datasetId-0"
                      >
                        <label
                          class="bp3-label"
                          for="datasetId"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="ceGcpBillingExport_datasetId"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            >
                              <span
                                class="StyledProps--font StyledProps--main StyledProps--inline"
                              >
                                connectors.ceGcp.billingExport.datasetIdLabel
                              </span>
                              <span
                                class="bp3-popover-wrapper"
                              >
                                <span
                                  class="bp3-popover-target"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                                    data-icon="info"
                                    tabindex="0"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 12 12"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="datasetId"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                          icon="chevron-left"
                        >
                          <svg
                            data-icon="chevron-left"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-left
                            </desc>
                            <path
                              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          previous
                        </span>
                      </button>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="extension"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main extention"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <h2>
              connectors.ceGcp.billingExtention.heading
            </h2>
            <div>
              <span
                class="prereq"
              >
                connectors.ceGcp.billingExtention.prerequisite
              </span>
               
              <a>
                connectors.ceGcp.billingExtention.readMore
              </a>
               
            </div>
            <ol>
              <li>
                connectors.ceGcp.billingExtention.step1
              </li>
              <li>
                connectors.ceGcp.billingExtention.step2
              </li>
              <li>
                connectors.ceGcp.billingExtention.step3.p1
                 
                <span
                  class="gray"
                >
                  connectors.ceGcp.billingExtention.step3.p2
                </span>
                connectors.ceGcp.billingExtention.step3.p3
              </li>
              <li>
                connectors.ceGcp.billingExtention.step4
              </li>
              <li>
                connectors.ceGcp.billingExtention.step5
              </li>
              <li>
                connectors.ceGcp.billingExtention.step6
              </li>
              <li>
                connectors.ceGcp.billingExtention.step7
              </li>
            </ol>
            <div>
              <div>
                 
                connectors.ceGcp.billingExtention.otherLinks
              </div>
              <ul>
                <li>
                  <a>
                    connectors.ceGcp.billingExtention.link1
                  </a>
                </li>
                <li>
                  <a>
                    connectors.ceGcp.billingExtention.link2
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main closeBtn"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="24"
          viewBox="0 0 20 20"
          width="24"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M8.41 10l5.29-5.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-6 6c-.18.18-.29.43-.29.71 0 .28.11.53.29.71l6 6a1.003 1.003 0 001.42-1.42L8.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 3`] = `
<div>
  <div
    style="display: flex; max-height: 700px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main gcpConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-gcp"
            >
              <svg
                height="40"
                viewBox="0 0 14 12"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="8.5"
                  id="service-gcp_svg__a"
                  maskUnits="userSpaceOnUse"
                  width="9.1"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h9.1v8.5H0z"
                    fill="#fff"
                  />
                </mask>
                <path
                  d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                  fill="#cac9c2"
                />
                <path
                  d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                  fill="#fff"
                />
                <path
                  d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                  fill="#5072aa"
                />
                <path
                  d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                  fill="#4d6796"
                />
                <path
                  d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                  fill="#fff"
                />
                <path
                  d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                  fill="#cc4232"
                />
                <path
                  d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                  fill="#b23f33"
                />
                <path
                  d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                  fill="#fff"
                />
                <path
                  d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                  fill="#ecb02a"
                  mask="url(#service-gcp_svg__a)"
                  transform="translate(0 3.421)"
                />
                <path
                  d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                  fill="#c79732"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connector
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.billingExport.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.grantPermission.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceGcp.grantPermission.heading
            </h2>
            <ol
              class="grantPermissionSteps"
            >
              <li>
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div>
                    connectors.ceGcp.grantPermission.step1
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main bigQueryPage Button--with-current-color Button--withRightIcon"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.ceGcp.grantPermission.bigQueryButtonText
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </li>
              <li>
                <div>
                  connectors.ceGcp.grantPermission.step2
                </div>
              </li>
              <li>
                <div>
                  connectors.ceGcp.grantPermission.step3
                </div>
              </li>
              <li>
                <div>
                  connectors.ceGcp.grantPermission.step4
                </div>
              </li>
              <li>
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div>
                    connectors.ceGcp.grantPermission.step5
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main commandsContainer"
                  >
                    <div
                      class="StyledProps--font StyledProps--main command"
                    >
                      <pre>
                        harness-ce-harness-kmpys@ccm-play.iam.gserviceaccount.com
                      </pre>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class=""
                            tabindex="0"
                          >
                            <span
                              class="bp3-icon StyledProps--main copyIcon"
                              data-icon="copy-alt"
                            >
                              <svg
                                fill="none"
                                height="20"
                                viewBox="0 0 8 9"
                                width="20"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <li>
                <div>
                  connectors.ceGcp.grantPermission.step6
                </div>
              </li>
              <li>
                <div>
                  connectors.ceGcp.grantPermission.step7
                </div>
              </li>
            </ol>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-left"
                >
                  <svg
                    data-icon="chevron-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-left
                    </desc>
                    <path
                      d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  previous
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 4`] = `
<div>
  <div
    style="display: flex; max-height: 700px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main gcpConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-gcp"
            >
              <svg
                height="40"
                viewBox="0 0 14 12"
                width="40"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="8.5"
                  id="service-gcp_svg__a"
                  maskUnits="userSpaceOnUse"
                  width="9.1"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h9.1v8.5H0z"
                    fill="#fff"
                  />
                </mask>
                <path
                  d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                  fill="#cac9c2"
                />
                <path
                  d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                  fill="#fff"
                />
                <path
                  d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                  fill="#5072aa"
                />
                <path
                  d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                  fill="#4d6796"
                />
                <path
                  d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                  fill="#fff"
                />
                <path
                  d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                  fill="#cc4232"
                />
                <path
                  d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                  fill="#b23f33"
                />
                <path
                  d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                  fill="#fff"
                />
                <path
                  d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                  fill="#ecb02a"
                  mask="url(#service-gcp_svg__a)"
                  transform="translate(0 3.421)"
                />
                <path
                  d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                  fill="#c79732"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connector
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.billingExport.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.grantPermission.heading
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceGcp.testConnection.heading
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceGcp.testConnection.heading
            </h2>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
              id="steps-progress"
            >
              <div
                class="StepsProgress--progressBar"
              >
                <div
                  class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
                >
                  <div
                    class="bp3-progress-meter"
                    style="width: 33.33333333333333%;"
                  />
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style=""
                  >
                    connectors.ceGcp.testConnection.step1
                  </div>
                </div>
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="font-weight: normal;"
                  >
                    connectors.ceGcp.testConnection.step2
                  </div>
                </div>
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="font-weight: normal;"
                  >
                    connectors.ceGcp.testConnection.step3
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main submitBtn StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                close
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
